# interview

./: CMakeLists.txt  dynamic_prog.cpp  sort.cpp  vector_game.cpp
include/: 00_algorithm.h  02_dynprog.h  interview.h  shared_ptr.h  shared_ptr_with_deleter.h  type_erasure.h
src/: algorithm.cpp  prime.cpp  sort.cpp  test.cpp  vector_game.cpp
src_00_algorithm/: 00_arithmetics.cpp  03_stack.cpp  04_list.cpp  05_tree.cpp  06_tree_variant.cpp  08_sorting.cpp  all.h
src_01_algorithm/: 00_arithmetics.cpp  03_stack.cpp  06_tree_variant.cpp
src_01_dynprog_vec/: 12_2pt_diff_max.cpp  13_2pt_diff_count.cpp  14_subseq_sum_max.cpp  15_subseq_sum_count.cpp  16_substr.cpp  17_stack_trick.cpp  18_sorting_trick.cpp  all.h
src_02_dynprog/: 20_single_link_subproblem.cpp  21_multi_link_subproblem.cpp
src_02_dynprog_vec/: 02_two_point_diff.cpp  03_subseq_sum.cpp  04_string_and_stack.cpp
src_03_dynprog/: 21_multi_link_subproblem.cpp  22_time_state_diagram.cpp
src_03_fundalmental/: polymorphism.cpp
src_05_template/: template.cpp  template_tuple.cpp  template_variadic.cpp
src_05_template/include/: idx_seq.h  mem.h  traits.h  tuple.h
src_06_fundalmental/: 60_template_index_sequence.cpp  idx_seq.h  template.cpp  template_index_sequence.cpp  template_meta.cpp  template_tuple.cpp  tuple.h  tuple2.h
src_06_fundalmental/include/: meta.h  timer.h  tuple2.h
src_hackerank/: hacker1.cpp
src_interview/: alphagrep.cpp  apt.cpp  archax.cpp  citadel0.cpp  citadel1.cpp  citadel2.cpp  epoch.cpp  maven.cpp  optiver.cpp  smarket.cpp  test.cpp  wintermute.cpp
src_not_compiled/: dynamic_prog.cpp  merge.cpp  sort.cpp
src_preparation0/: prime.cpp  vector_game.cpp
